feat(di): Spread DI to LoadingProcesses.